corrected styles: alignments, colors, fonts; added no-tasks functionality, code cleaning;

--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,7 @@
 .header__heroHeading {
   text-align: center;
   text-transform: uppercase;
+  border-bottom: 1px dashed #000;
 }
 .header__heroHeading > * {
   margin-bottom: 1rem;
