--- a/styles/modal.css
+++ b/styles/modal.css
@@ -9,13 +9,18 @@
   z-index: 10;
   width: 100%;
   height: 100vh;
+  padding-inline: 1rem;
 }
+
 .contentContainer {
   border-radius: 5px;
   width: min(600px, 100%);
   padding: 1rem;
   background-color: #f5f5f5;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .confirmationButtons {
@@ -28,4 +33,10 @@
 
 .confirmationButtons button {
   width: min(60px, 100%);
+}
+
+.contentContainer__taskTitle {
+  word-break: break-word;
+  font-size: 1rem;
+  color: #5a2020;
 }
