--- a/styles/taskCard.css
+++ b/styles/taskCard.css
@@ -33,8 +33,9 @@
 
 .taskCard__footer .contentWrap {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
+  gap: 1rem;
 }
 
 .taskCard_description {
@@ -51,6 +52,10 @@
   text-decoration: line-through;
 }
 
+.tasCard__btnDelete {
+  width: min(200px, 100%);
+}
+
 /* Util */
 .overdue {
   color: #ff8080;
@@ -60,5 +65,13 @@
   .taskCard__header .contentWrap {
     flex-direction: row;
     text-align: start;
+  }
+  .taskCard__footer .contentWrap {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .tasCard__btnDelete {
+    width: min(60px, 100%);
   }
 }
