--- a/styles/taskList.css
+++ b/styles/taskList.css
@@ -3,3 +3,7 @@
   flex-direction: column;
   gap: 1rem;
 }
+
+.noTasksMsg {
+  text-align: center;
+}
